--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -11,6 +11,9 @@
     },
     "jp.lilxyzw.liltoon": {
       "version": "1.8.3"
+    },
+    "nadena.dev.modular-avatar": {
+      "version": "1.11.0"
     }
   },
   "locked": {
@@ -30,6 +33,17 @@
     },
     "jp.lilxyzw.liltoon": {
       "version": "1.8.3",
+      "dependencies": {}
+    },
+    "nadena.dev.modular-avatar": {
+      "version": "1.11.0",
+      "dependencies": {
+        "com.vrchat.avatars": ">=3.7.4",
+        "nadena.dev.ndmf": ">=1.6.0 <2.0.0-a"
+      }
+    },
+    "nadena.dev.ndmf": {
+      "version": "1.6.2",
       "dependencies": {}
     }
   }
